--- a/style-transfer.ipynb
+++ b/style-transfer.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "An example is shown below, where the content image is of a dog, and the style image is of [Hokusai's Great Wave](https://en.wikipedia.org/wiki/The_Great_Wave_off_Kanagawa). The generated target image still contains the dog but is stylized with the waves, blue and beige colors, and block print textures of the style image. Target image below is obtained by running the code provided in this notebook.\n",
     "\n",
-    "<img src='images/target-image.png' width=60% />"
+    "<img src='images/target-image.PNG' width=60% />"
    ]
   },
   {
