--- a/style-transfer.ipynb
+++ b/style-transfer.ipynb
@@ -805,6 +805,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "This notebook is adapted from Udacity Deep Learning program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
